增加 内存监控点的查询
